# serializer version: 1
# name: test_from_data_ip_address[192.168.0.1]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_ip_address[None]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': None,
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_ip_address[]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_network[None]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.UNKNOWN: 'unknown'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_network[invalid]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.UNKNOWN: 'unknown'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_network[wired]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_version[1.493.180]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': False,
    'version': '1.493.180',
    'volume': 0,
  })
# ---
# name: test_from_data_version[100.0.0]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '100.0.0',
    'volume': 0,
  })
# ---
# name: test_from_data_version[3.34.0]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.0',
    'volume': 0,
  })
# ---
# name: test_from_data_version[None]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': False,
    'version': None,
    'volume': 0,
  })
# ---
# name: test_from_data_version[]
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Back Patio',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 1,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '1234567890',
    'shuffle': False,
    'state': None,
    'supported_version': False,
    'version': '',
    'volume': 0,
  })
# ---
# name: test_get_queue
  list([
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555606',
      'queue_id': 1,
      'song': 'Baby',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555607',
      'queue_id': 2,
      'song': 'Down',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555608',
      'queue_id': 3,
      'song': '22 Break',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555609',
      'queue_id': 4,
      'song': 'Free',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555610',
      'queue_id': 5,
      'song': "Don't Let The Neighbourhood Hear",
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555611',
      'queue_id': 6,
      'song': 'Dinner',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555612',
      'queue_id': 7,
      'song': 'Rollercoaster Baby',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555613',
      'queue_id': 8,
      'song': 'Love Me Now',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555614',
      'queue_id': 9,
      'song': 'You > Me',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555615',
      'queue_id': 10,
      'song': 'Kicking The Doors Down',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555616',
      'queue_id': 11,
      'song': 'Twenty Fourteen',
    }),
  ])
# ---
# name: test_get_queue_with_range
  list([
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555606',
      'queue_id': 1,
      'song': 'Baby',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555607',
      'queue_id': 2,
      'song': 'Down',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555608',
      'queue_id': 3,
      'song': '22 Break',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555609',
      'queue_id': 4,
      'song': 'Free',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555610',
      'queue_id': 5,
      'song': "Don't Let The Neighbourhood Hear",
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555611',
      'queue_id': 6,
      'song': 'Dinner',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555612',
      'queue_id': 7,
      'song': 'Rollercoaster Baby',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555613',
      'queue_id': 8,
      'song': 'Love Me Now',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555614',
      'queue_id': 9,
      'song': 'You > Me',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555615',
      'queue_id': 10,
      'song': 'Kicking The Doors Down',
    }),
    dict({
      'album': '22 Break',
      'album_id': '199555605',
      'artist': 'Oh Wonder',
      'image_url': 'http://resources.wimpmusic.com/images/bdfd93c2/0b3a/495e/a557/4493fcbb7ab3/640x640.jpg',
      'media_id': '199555616',
      'queue_id': 11,
      'song': 'Twenty Fourteen',
    }),
  ])
# ---
# name: test_get_quick_selects
  dict({
    1: 'Quick Select 1',
    2: 'Quick Select 2',
    3: 'Quick Select 3',
    4: 'Quick Select 4',
    5: 'Quick Select 5',
    6: 'Quick Select 6',
  })
# ---
# name: test_now_playing_media_unavailable
  dict({
    'album': None,
    'album_id': None,
    'artist': None,
    'current_position': None,
    'current_position_updated': None,
    'duration': None,
    'image_url': None,
    'media_id': None,
    'options': list([
    ]),
    'queue_id': None,
    'song': None,
    'source_id': None,
    'station': None,
    'supported_controls': list([
    ]),
    'type': None,
  })
# ---
# name: test_refresh
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': -263109739,
    'ip_address': '127.0.0.1',
    'is_muted': False,
    'line_out': <LineOutLevelType.VARIABLE: 1>,
    'model': 'HEOS Drive',
    'name': 'Zone 1',
    'network': <NetworkType.WIRED: 'wired'>,
    'now_playing_media': dict({
      'album': 'Album',
      'album_id': '123456',
      'artist': 'Artist',
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
      'media_id': '4256592506324148495',
      'options': list([
        dict({
          'context': 'play',
          'id': 11,
          'name': 'Thumbs Up',
        }),
        dict({
          'context': 'play',
          'id': 12,
          'name': 'Thumbs Down',
        }),
        dict({
          'context': 'play',
          'id': 19,
          'name': 'Add to HEOS Favorites',
        }),
      ]),
      'queue_id': 1,
      'song': "Disney (Children's) Radio",
      'source_id': 13,
      'station': "Disney (Children's) Radio",
      'supported_controls': list([
        <ControlType.PLAY: 'play'>,
        <ControlType.PAUSE: 'pause'>,
        <ControlType.STOP: 'stop'>,
        <ControlType.PLAY_NEXT: 'play_next'>,
        <ControlType.PLAY_PREVIOUS: 'play_previous'>,
      ]),
      'type': <MediaType.STATION: 'station'>,
    }),
    'playback_error': None,
    'player_id': -263109739,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '123456789',
    'shuffle': False,
    'state': <PlayState.STOP: 'stop'>,
    'supported_version': True,
    'version': '3.34.620',
    'volume': 36,
  })
# ---
# name: test_update_from_data
  dict({
    'available': True,
    'control': <VolumeControlType.UNKNOWN: 0>,
    'group_id': None,
    'ip_address': '192.168.0.2',
    'is_muted': False,
    'line_out': <LineOutLevelType.UNKNOWN: 0>,
    'model': 'HEOS Drives',
    'name': 'Patio',
    'network': <NetworkType.WIFI: 'wifi'>,
    'now_playing_media': dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'current_position': None,
      'current_position_updated': None,
      'duration': None,
      'image_url': None,
      'media_id': None,
      'options': list([
      ]),
      'queue_id': None,
      'song': None,
      'source_id': None,
      'station': None,
      'supported_controls': list([
      ]),
      'type': None,
    }),
    'playback_error': None,
    'player_id': 2,
    'repeat': <RepeatType.OFF: 'off'>,
    'serial': '0987654321',
    'shuffle': False,
    'state': None,
    'supported_version': True,
    'version': '3.34.610',
    'volume': 0,
  })
# ---
